--- a/excipients.html
+++ b/excipients.html
@@ -481,7 +481,7 @@
       <!-- Lubricant -->
       <h2 class="section-heading">Lubricant</h2>
       <table class="classification-table w-full mb-12 bg-white rounded-lg overflow-hidden shadow">
-        <thead><tr><th>No</th><th>Item</th><th>Origin</th><th>Shipment</th></tr></thead>
+        <thead><tr><th></th><th>Item</th><th>Origin</th><th>Shipment</th></tr></thead>
         <tbody class="divide-y divide-gray-100">
           <tr class="hover:bg-gray-50"><td>70</td><td>Talc powder</td><td>China</td><td>3 Weeks</td></tr>
         </tbody>
