--- a/aping.html
+++ b/aping.html
@@ -45,6 +45,9 @@
       background: linear-gradient(to right, #0f609b, #118f9d);
       padding: 1.5rem 2rem;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 50;
     }
 
     /* Header container adjustments */
@@ -60,7 +63,7 @@
       margin-right: 2rem;
       color: #ffffff;
       font-size: 2.5rem;
-      font-weight: bold;
+      font-weight: 700;
     }
 
     /* Navigation Links */
@@ -82,9 +85,11 @@
       align-items: center;
     }
 
+    /* Icon Styles */
     .icon {
       font-size: 1.5rem;
-      transition: transform 0.3s ease, color 0.3s ease;
+      transition: transform 0.3s ease;
+      color: #ffffff;
     }
 
     .icon:hover {
@@ -92,59 +97,65 @@
       color: #67a955;
     }
 
-    /* Enhanced Footer Section Styling */
     .footer {
-      background: #118f9d;
-      color: white;
-      padding: 4rem 2rem;
-      box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
-    }
+  background: linear-gradient(to right, #0f609b, #118f9d); /* Same gradient as About Us */
+  color: white;
+  padding: 4rem 2rem;
+  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+}
 
-    .footer-container {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
-    .footer-section {
-      flex: 1;
-      margin-bottom: 2rem;
-    }
+.footer-section {
+  flex: 1;
+  margin-bottom: 2rem;
+  min-width: 200px; /* Ensures responsiveness */
+}
 
-    .footer-section h3 {
-      color: #ffffff;
-      font-weight: bold;
-      margin-bottom: 1rem;
-    }
+.footer-section h3 {
+  color: #ffffff;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
 
-    .footer-section ul {
-      list-style: none;
-      padding: 0;
-    }
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
 
-    .footer-section ul li {
-      margin-bottom: 0.5rem;
-    }
+.footer-section ul li {
+  margin-bottom: 0.5rem;
+}
 
-    .footer-section a {
-      color: #ffffff;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
+.footer-section a {
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s;
+}
 
-    .footer-section a:hover {
-      color: #bdbdbd;
-    }
+.footer-section a:hover {
+  color: #bdbdbd;
+}
 
-    .footer-icons {
-      display: flex;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
+.footer-icons {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
 
-    .footer-icons a:hover {
-      transform: scale(1.1);
-    }
+.footer-icons a {
+  font-size: 1.5rem; /* Adjust icon size as needed */
+  transition: transform 0.3s ease;
+}
+
+.footer-icons a:hover {
+  transform: scale(1.1);
+}
+
 
     /* Ingredients Section Styling */
     .ingredients-section {
@@ -260,11 +271,11 @@
   </style>
 </head>
 <body>
-  <header class="text-white shadow-lg sticky top-0 z-50">
+  <header>
     <div class="container mx-auto header-container">
       <!-- Logo -->
-      <div class="text-3xl font-bold cursor-pointer logo">
-        Stark International
+      <div class="logo">
+        <a href="index.html">Stark International</a>
       </div>
 
       <!-- Navigation Links -->
@@ -272,16 +283,16 @@
         <a href="index.html" class="nav-link font-medium">Home</a>
         <a href="about.html" class="nav-link font-medium">About</a>
         <a href="products.html" class="nav-link font-medium">Products</a>
-        <a href="contact.html" class="nav-link font-medium">Contact</a>
+        <a href="#contact" class="nav-link font-medium">Contact</a>
       </nav>
 
       <!-- WhatsApp and Gmail Icons -->
       <div class="controls">
-        <a href="https://wa.me/+1234567890" target="_blank" class="hover:text-green-400 transition">
+        <a href="https://wa.me/971518007643" target="_blank" class="transition">
           <i class="fab fa-whatsapp icon"></i>
         </a>
         <!-- Gmail Icon -->
-        <a href="mailto:contact@starkint.com" class="hover:text-red-400 transition">
+        <a href="mailto:contact@starkint.com" class="transition">
           <i class="fas fa-envelope icon"></i>
         </a>
       </div>
@@ -292,7 +303,7 @@
     <div class="fullscreen-content" style="text-align: center; padding: 4rem;">
       <h1 style="font-size: 3rem; color: #0f609b; font-weight: 700;">Active Pharmaceutical Ingredients (API)</h1>
       <p style="font-size: 1.2rem; color: #333; margin-top: 1rem;">Providing a diverse range of high-quality APIs to cater to global needs, ensuring international quality standards and regulatory compliance.</p>
-      <a href="#ingredients" class="learn-more-btn" style="display: inline-block; margin-top: 2rem; padding: 1rem 2rem; background-color: #118f9d; color: white; font-weight: 600; border-radius: 30px; transition: background-color 0.3s ease, transform 0.3s ease; text-decoration: none;">Contact Us</a>
+      <a href="contact.html" class="learn-more-btn" style="display: inline-block; margin-top: 2rem; padding: 1rem 2rem; background-color: #118f9d; color: white; font-weight: 600; border-radius: 30px; transition: background-color 0.3s ease, transform 0.3s ease; text-decoration: none;">Contact Us</a>
     </div>
   </section>
 
@@ -300,6 +311,24 @@
     <div class="ingredients-heading">
       <h2>API Ingredients</h2>
     </div>
+<!-- API Search Bar -->
+<div style="text-align: center; margin-bottom: 2rem;">
+  <input type="text" id="apiSearch" placeholder="Search API..." style="width: 50%; padding: 0.8rem; font-size: 1rem; border: 1px solid #ccc; border-radius: 10px;">
+</div>
+
+<script>
+  // API Search Functionality
+  document.getElementById('apiSearch').addEventListener('keyup', function() {
+    let query = this.value.toLowerCase();
+    let items = document.querySelectorAll('.ingredient-item');
+    
+    items.forEach(item => {
+      let apiName = item.querySelector('h3').textContent.toLowerCase();
+      item.style.display = apiName.includes(query) ? 'block' : 'none';
+    });
+  });
+</script>
+
     <div class="ingredients-grid">
       <!-- Start of full API list -->
       <div class="ingredient-item">
@@ -1569,40 +1598,34 @@
       <div class="footer-section">
         <h3>Our Services</h3>
         <ul>
-          <li><a href="#">Pharmaceutical Ingredients</a></li>
-          <li><a href="#">Excipients</a></li>
+          <li><a href="excipients.html">Excipients</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h3>Quick Links</h3>
         <ul>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="#products">Products</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms of Service</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
+      
       <div class="footer-section">
         <h3>Connect with Us</h3>
         <div class="footer-icons">
-          <a href="https://wa.me/+971505050505" target="_blank" class="hover:text-green-400">
+          <a href="https://wa.me/+971518007643" target="_blank" class="hover:text-green-400">
             <i class="fab fa-whatsapp"></i>
           </a>
-          <a href="mailto:contact@starkint.com" class="hover:text-red-400">
+          <a href="mailto:info@starkintl.com" class="hover:text-red-400">
             <i class="fas fa-envelope icon"></i>
           </a>
           <a href="tel:+971505050505" class="hover:text-blue-400">
             <i class="fas fa-phone"></i>
           </a>
-          <a href="https://www.linkedin.com" target="_blank" class="hover:text-blue-500">
+          <a href="https://www.linkedin.com/company/starkintl?trk=blended-typeahead" target="_blank" class="hover:text-blue-500">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://twitter.com" target="_blank" class="hover:text-blue-500">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://facebook.com" target="_blank" class="hover:text-blue-500">
-            <i class="fab fa-facebook"></i>
           </a>
         </div>
       </div>
