--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stark International - Products</title>
 
-  <!-- Device Detection Script: Redirect to exipients.html if on mobile -->
+  <!-- Device Detection Script: Redirect to excipients.html if on mobile -->
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       var userAgent = navigator.userAgent.toLowerCase();
@@ -15,10 +15,21 @@
     });
   </script>
 
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet"/>
+
+  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- AOS CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet"/>
+
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -41,6 +52,7 @@
       width: 100%;
     }
 
+    /* Header gradient */
     header {
       background: linear-gradient(to right, #0f609b, #118f9d);
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -49,39 +61,45 @@
       z-index: 50;
     }
 
+    /* Header container adjustments */
     .header-container {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 1rem 2rem;
+      padding: 1.5rem 2rem;
     }
 
+    /* Logo Style */
     .logo {
       flex-shrink: 0;
       color: #ffffff;
-      font-size: 2rem;
+      font-size: 2.5rem;
       font-weight: 700;
     }
 
+    /* Navigation Links */
     nav {
       display: flex;
       gap: 1.5rem;
     }
+
     .nav-link {
       font-size: 1.2rem;
       color: #ffffff;
       transition: color 0.3s ease;
     }
 
+    /* Icon Styles */
     .icon {
       font-size: 1.5rem;
       transition: transform 0.3s ease, color 0.3s ease;
-      color: #ffffff; /* Ensures icons stay white */
+      color: #ffffff;
     }
 
     .icon:hover {
       transform: scale(1.1);
-      /* Removed color change on hover as requested */
+      /* Optional: Add color change on hover */
+      color: #67a955;
     }
 
     .controls {
@@ -105,6 +123,21 @@
       color: #0f609b;
       text-align: center;
       margin-bottom: 4rem;
+      position: relative;
+      display: inline-block;
+      /* Adding animation for the heading */
+      animation: fadeInDown 1s ease-out;
+    }
+
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-50px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .product-grid {
@@ -115,7 +148,7 @@
 
     .product-card {
       padding: 2rem;
-      background: #f0f8f4;
+      background: linear-gradient(135deg, #e0f4f7 0%, #ffffff 100%);
       border: 2px solid #cfe9d8;
       border-radius: 15px;
       box-shadow: 0 6px 25px rgba(0, 0, 0, 0.1);
@@ -124,6 +157,8 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
+      position: relative;
+      overflow: hidden;
     }
 
     .product-card:hover {
@@ -135,6 +170,16 @@
       font-size: 2rem;
       color: #118f9d;
       margin-bottom: 1rem;
+      animation: fadeIn 1s ease-out;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     .product-card p {
@@ -142,11 +187,14 @@
       line-height: 1.8;
       color: #555;
       margin-bottom: 2rem;
+      animation: fadeIn 1.5s ease-out;
     }
 
     .product-link {
-      display: inline-block;
-      margin-top: auto;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
       padding: 0.8rem 1.5rem;
       background-color: #0f609b;
       color: white;
@@ -154,6 +202,7 @@
       border-radius: 30px;
       transition: background-color 0.3s ease, transform 0.3s ease;
       text-decoration: none;
+      animation: slideInUp 2s ease-out;
     }
 
     .product-link:hover {
@@ -161,77 +210,118 @@
       transform: translateY(-3px);
     }
 
+    @keyframes slideInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     .footer {
-      background: linear-gradient(to right, #118f9d, #0f609b);
-      color: white;
-      padding: 4rem 2rem;
-      margin-top: 4rem;
-    }
+  background: linear-gradient(to right, #0f609b, #118f9d); /* Same gradient as About Us */
+  color: white;
+  padding: 4rem 2rem;
+  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+}
 
-    .footer-container {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
-    .footer-section {
-      flex: 1;
-      margin-bottom: 2rem;
-      min-width: 200px;
-    }
+.footer-section {
+  flex: 1;
+  margin-bottom: 2rem;
+  min-width: 200px; /* Ensures responsiveness */
+}
 
-    .footer-section h3 {
-      color: #ffffff;
-      font-weight: bold;
-      margin-bottom: 1rem;
-    }
+.footer-section h3 {
+  color: #ffffff;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
 
-    .footer-section ul {
-      list-style: none;
-      padding: 0;
-    }
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
 
-    .footer-section ul li {
-      margin-bottom: 0.5rem;
-    }
+.footer-section ul li {
+  margin-bottom: 0.5rem;
+}
 
-    .footer-section a {
-      color: #ffffff;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
+.footer-section a {
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s;
+}
 
-    .footer-section a:hover {
-      color: #bdbdbd;
-    }
+.footer-section a:hover {
+  color: #bdbdbd;
+}
 
-    .footer-icons {
-      display: flex;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
+.footer-icons {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
 
-    .footer-icons a:hover {
-      transform: scale(1.1);
-    }
+.footer-icons a {
+  font-size: 1.5rem; /* Adjust icon size as needed */
+  transition: transform 0.3s ease;
+}
+
+.footer-icons a:hover {
+  transform: scale(1.1);
+}
+
 
     @media(max-width: 768px) {
       nav {
         display: none;
       }
     }
+
+    /* Icon Styling for Product Titles */
+    .product-icon {
+      font-size: 3rem;
+      color: #67a955;
+      margin-bottom: 1rem;
+    }
+
+    /* Styling for Product Images */
+    .product-image {
+      width: 100%;
+      max-width: 200px;
+      height: auto;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease, filter 0.3s ease;
+    }
+
+    .product-card:hover .product-image {
+      transform: scale(1.05);
+      filter: brightness(95%);
+    }
   </style>
 </head>
 <body>
+  <!-- Header Section -->
   <header>
     <div class="container mx-auto header-container">
       <!-- Logo -->
-      <div class="logo cursor-pointer">
+      <div class="logo">
         <a href="index.html">Stark International</a>
       </div>
 
-      <!-- Navigation Links (visible on larger screens) -->
-      <nav class="hidden md:flex">
+      <!-- Navigation Links -->
+      <nav>
         <a href="index.html" class="nav-link font-medium">Home</a>
         <a href="about.html" class="nav-link font-medium">About</a>
         <a href="products.html" class="nav-link font-medium">Products</a>
@@ -240,10 +330,10 @@
 
       <!-- WhatsApp and Gmail Icons -->
       <div class="controls">
-        <a href="https://wa.me/+1234567890" target="_blank">
+        <a href="https://wa.me/971518007643" target="_blank" class="transition" aria-label="WhatsApp">
           <i class="fab fa-whatsapp icon"></i>
         </a>
-        <a href="mailto:contact@starkint.com">
+        <a href="mailto:contact@starkint.com" class="transition" aria-label="Email">
           <i class="fas fa-envelope icon"></i>
         </a>
       </div>
@@ -256,16 +346,28 @@
     <div class="product-grid">
       <!-- Active Pharmaceutical Ingredients Section -->
       <div class="product-card">
+        <!-- Product Image -->
+        <img src="images/molecules.avif" alt="Active Pharmaceutical Ingredients" class="product-image">
+
         <h2>Active Pharmaceutical Ingredients (APIs)</h2>
         <p>We supply high-quality APIs compliant with international standards. Our offerings come with full documentation to ensure regulatory compliance and foster innovative drug development. Partner with us for a healthier future.</p>
-        <a href="aping.html" class="product-link">Learn More</a>
+        <a href="aping.html" class="product-link">
+          Learn More
+          <i class="fas fa-arrow-right"></i>
+        </a>
       </div>
 
       <!-- Excipients Section -->
-      <div class="product-card">
+      <div class="product-card" data-aos="flip-left">
+        <!-- Product Image -->
+        <img src="images/molecules2.webp" alt="Excipients" class="product-image">
+
         <h2>Excipients</h2>
         <p>Our excipients are biologically stable, pharmaceutically acceptable, and cost-effective. Approved by regulatory bodies, they ensure safety, accessibility, and top-tier functionality in drug formulations.</p>
-        <a href="excipients.html" class="product-link">Learn More</a>
+        <a href="excipients.html" class="product-link">
+          Learn More
+          <i class="fas fa-arrow-right"></i>
+        </a>
       </div>
     </div>
   </section>
@@ -276,41 +378,64 @@
       <div class="footer-section">
         <h3>Our Services</h3>
         <ul>
-          <li><a href="aping.html">Pharmaceutical Ingredients</a></li>
+          <li><a href="aping.html">Active Pharmaceutical Ingredients</a></li>
           <li><a href="excipients.html">Excipients</a></li>
+          <!-- Removed "Products" from Our Services as requested -->
         </ul>
       </div>
       <div class="footer-section">
         <h3>Quick Links</h3>
         <ul>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="products.html">Products</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms of Service</a></li>
+          <!-- Removed "Privacy Policy" and "Terms of Service" as requested -->
         </ul>
       </div>
       <div class="footer-section">
         <h3>Connect with Us</h3>
         <div class="footer-icons">
-          <a href="https://wa.me/+971505050505" target="_blank">
+          <a href="https://wa.me/971518007643" target="_blank" aria-label="WhatsApp">
             <i class="fab fa-whatsapp"></i>
           </a>
-          <a href="mailto:contact@starkint.com">
+          <a href="mailto:contact@starkint.com" aria-label="Email">
             <i class="fas fa-envelope icon"></i>
           </a>
-          <a href="tel:+971505050505">
+          <a href="tel:+971518007643" aria-label="Phone">
             <i class="fas fa-phone"></i>
           </a>
-          <a href="https://www.linkedin.com" target="_blank">
+          <a href="https://www.linkedin.com/company/starkintl?trk=blended-typeahead" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://twitter.com" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
+          <!-- Removed Twitter icon as requested -->
         </div>
       </div>
     </div>
   </footer>
+
+  <!-- AOS JS and Initialization -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 800, // Animation duration in milliseconds
+      once: true,    // Whether animation should happen only once - while scrolling down
+      mirror: false, // Whether elements should animate out while scrolling past them
+    });
+  </script>
+
+  <!-- Mobile Redirect Script -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // Function to detect mobile devices
+      function isMobileDevice() {
+        return /Mobi|Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+      }
+
+      // Redirect to excipients.html if accessed from a mobile device
+      if (isMobileDevice()) {
+        window.location.href = "excipients.html";
+      }
+    });
+  </script>
 </body>
 </html>
