--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
   <!-- Preload Custom Fonts -->
   <link rel="preload" href="fonts/Murasuit.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/Murasuit.woff" as="font" type="font/woff" crossorigin>
-  <link rel="preload" href="fonts/Murasuit.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="fonts/Murasuit.ttf" as="font/ttf" crossorigin>
 
   <style>
     @font-face {
@@ -40,6 +40,7 @@
       margin: 0;
       background-color: #ffffff;
       scroll-behavior: smooth;
+      overflow-x: hidden; /* Prevent horizontal scroll */
     }
 
     /* Fade-in on scroll */
@@ -81,11 +82,14 @@
       background: #000; /* fallback background */
     }
 
-    /* Display images fully (object-contain) with no fixed height */
+    /* Ensure full image visibility without cropping */
     .slide img {
       width: 100%;
       height: auto;
+      max-height: 60vh; /* Restrict height to show full image */
       object-fit: contain;
+      display: block;
+      margin: 0 auto;
       background: #fff;
     }
 
@@ -128,7 +132,7 @@
         </ul>
       </nav>
 
-      <!-- WhatsApp and Gmail Icons (Visible on larger screens) -->
+      <!-- WhatsApp and Email Icons (For Desktop) -->
       <div class="hidden md:flex items-center gap-4">
         <a href="https://wa.me/971518007643" target="_blank" class="transition text-white" aria-label="WhatsApp">
           <i class="fab fa-whatsapp text-xl hover:scale-110"></i>
@@ -151,7 +155,7 @@
   </div>
 
   <!-- Fullscreen Section with Slideshow -->
-  <section id="medicine-section" class="relative overflow-hidden fade-section mt-[130px] md:mt-[90px]">
+  <section id="medicine-section" class="relative fade-section pt-[90px]">
     <div class="slides-container">
       <div class="slide"><img src="images/medicine.jpg" alt="Medicine Slide 1"></div>
       <div class="slide"><img src="images/beakers.jpg" alt="Medicine Slide 2"></div>
@@ -185,7 +189,7 @@
   </section>
 
   <!-- Intro Content Section -->
-  <section class="fade-section my-10 px-4">
+  <section class="fade-section my-4 px-4">
     <div class="max-w-7xl mx-auto bg-white rounded-lg shadow-lg p-6 flex flex-col md:flex-row gap-8 items-center">
       <div class="text-content flex-1">
         <h2 class="text-[#67a955] font-semibold text-lg md:text-xl mb-2">Pioneering Healthcare Solutions</h2>
@@ -203,7 +207,7 @@
   </section>
 
   <!-- Split Section -->
-  <section class="fade-section my-10 px-4">
+  <section class="fade-section my-4 px-4">
     <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center gap-8 relative">
       <div class="vertical-line hidden md:block absolute left-1/2 top-0 bottom-0 w-[6px] bg-[#118f9d] rounded-full transform -translate-x-1/2"></div>
 
@@ -226,7 +230,7 @@
   </section>
 
   <!-- Order Products Section -->
-  <section class="fade-section my-10 px-4">
+  <section class="fade-section my-4 px-4">
     <div class="bg-gray-100 rounded-2xl shadow-xl p-6 md:p-8 text-center max-w-4xl mx-auto">
       <h2 class="text-2xl md:text-3xl font-bold mb-4">Order Our Products</h2>
       <p class="text-base md:text-xl leading-8 max-w-2xl mx-auto">
@@ -236,10 +240,8 @@
     </div>
   </section>
 
-  <!-- Removed Statistics Section as requested -->
-
-  <!-- Contact & Map Section (Improved for Mobile) -->
-  <section id="contact" class="fade-section my-10 px-4">
+  <!-- Contact & Map Section -->
+  <section id="contact" class="fade-section my-4 px-4">
     <div class="max-w-7xl mx-auto bg-white rounded-xl shadow-xl p-6 md:p-8 flex flex-col gap-8">
       <h2 class="text-[#118f9d] font-bold text-2xl text-center mb-4">Get in Touch</h2>
       <p class="text-base text-center mb-6">
@@ -360,8 +362,6 @@
     // Fade-in on scroll observer
     document.addEventListener('DOMContentLoaded', function() {
       startSlideshow();
-      
-      // No counters are animated now since we removed that section
 
       const observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
