--- a/index.html
+++ b/index.html
@@ -14,13 +14,31 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   
+  <!-- Preload Custom Fonts -->
+  <link rel="preload" href="fonts/Murasuit.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/Murasuit.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="fonts/Murasuit.ttf" as="font" type="font/ttf" crossorigin>
+  
+  <!-- If using InaiMathi, add its preload links here -->
+  
   <style>
+    /* Define 'Murasuit' Font - Regular */
     @font-face {
-      font-family: 'Bodoniferraposter-extra';
-      src: url('fonts/Bodoniferraposter-extra.woff2') format('woff2'),
-           url('fonts/Bodoniferraposter-extra.woff') format('woff');
-      font-weight: normal;
+      font-family: 'Murasuit';
+      src: url('fonts/Murasuit.woff2') format('woff2'),
+           url('fonts/Murasuit.woff') format('woff'),
+           url('fonts/Murasuit.ttf') format('truetype');
+      font-weight: 400; /* Normal weight */
       font-style: normal;
+      font-display: swap; /* Enhances performance */
+    }
+
+    /* If using InaiMathi, define its @font-face here */
+
+    /* Custom Class for Murasuit Font */
+    .font-Murasuit {
+      font-family: 'Murasuit', sans-serif;
+      font-weight: 400; /* Ensure using the regular weight */
     }
 
     /* Body Styling */
@@ -63,18 +81,18 @@
       justify-content: space-between;
     }
 
-    .logo {
+    /* Apply 'Murasuit' to the Logo */
+    .logo a {
+      /* Removed font-size and font-weight to allow Tailwind's utility classes */
       flex-shrink: 0;
       margin-right: 2rem;
-      font-size: 1.5rem;
-      font-weight: bold;
       color: #ffffff;
+      text-decoration: none; /* Remove underline */
     }
 
     nav {
       display: flex;
       gap: 1.2rem;
-      /* Removed margin-left: -1rem; */
     }
 
     .nav-link {
@@ -145,18 +163,21 @@
       max-width: 70%;
     }
 
+    /* Apply 'Murasuit' to the Fullscreen Header Text */
     .fullscreen-content h1 {
-      font-family: 'Bodoniferraposter-extra', serif;
+      /* Removed inline style to apply Tailwind classes */
       text-shadow: 4px 4px 20px rgba(0, 0, 0, 1);
-      font-size: 4rem;
+      /* font-size and font-weight are controlled via Tailwind classes */
       text-transform: uppercase;
     }
 
+    /* Apply 'Organetto' with desired weight to Subtitle */
     .fullscreen-content p {
       font-family: 'Organetto', sans-serif;
       text-shadow: 4px 4px 20px rgba(0, 0, 0, 1);
       font-size: 1.8rem;
       margin-top: 1rem;
+      font-weight: 500; /* Adjust based on desired weight */
     }
 
     .learn-more-btn {
@@ -200,6 +221,15 @@
 
     .arrow.right {
       right: 2rem;
+    }
+
+    /* Button Group Styling */
+    .button-group {
+      display: flex;
+      gap: 1rem; /* Space between buttons */
+      flex-wrap: wrap; /* Wrap on smaller screens */
+      justify-content: center; /* Center the buttons */
+      margin-top: 1.5rem;
     }
 
     /* Content Sections */
@@ -533,6 +563,41 @@
       opacity: 1 !important;
       transform: translateY(0) !important;
     }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      .fullscreen-content h1 {
+        font-size: 2.5rem;
+      }
+
+      .fullscreen-content p {
+        font-size: 1.2rem;
+      }
+
+      .logo a {
+        font-size: 1.2rem;
+      }
+
+      .content-section {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .map-section-container {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .map-details, .map-section {
+        width: 100%;
+      }
+
+      /* Adjust button layout on smaller screens */
+      .button-group {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
   </style>
 </head>
 <body>
@@ -548,7 +613,8 @@
     <div class="container mx-auto header-container">
       <!-- Logo -->
       <div class="logo">
-        <a href="index.html">Stark International</a>
+        <!-- Reverted font size from text-6xl to text-5xl -->
+        <a href="index.html" class="font-Murasuit text-5xl">Stark International</a>
       </div>
 
       <!-- Navigation Links -->
@@ -556,16 +622,16 @@
         <a href="index.html" class="nav-link font-medium">Home</a>
         <a href="about.html" class="nav-link font-medium">About</a>
         <a href="products.html" class="nav-link font-medium">Products</a>
-        <a href="#contact" class="nav-link font-medium">Contact</a>
+        <a href="contact.html" class="nav-link font-medium">Contact</a>
       </nav>
 
       <!-- WhatsApp and Gmail Icons -->
       <div class="controls">
-        <a href="https://wa.me/971518007643" target="_blank" class="transition text-white">
+        <a href="https://wa.me/971518007643" target="_blank" class="transition text-white" aria-label="WhatsApp">
           <i class="fab fa-whatsapp icon"></i>
         </a>
         <!-- Gmail Icon -->
-        <a href="mailto:contact@starkint.com" class="transition text-white">
+        <a href="mailto:info@starkintl.com" class="transition text-white" aria-label="Email">
           <i class="fas fa-envelope icon"></i>
         </a>
       </div>
@@ -588,9 +654,16 @@
     </div>
 
     <div class="fullscreen-content">
-      <h1 class="text-5xl font-bold">STARK INTERNATIONAL</h1>
+      <!-- Increased font size from text-3xl to text-6xl -->
+      <h1 class="font-Murasuit text-6xl">STARK INTERNATIONAL</h1>
       <p class="text-2xl mt-4">A Partner to Trust</p>
-      <a href="about.html" class="learn-more-btn">Learn More</a>
+      
+      <!-- Button Group -->
+      <div class="button-group">
+        <a href="about.html" class="learn-more-btn">Learn More</a>
+        <a href="aping.html" class="learn-more-btn">API Listing</a>
+        <a href="excipients.html" class="learn-more-btn">Excipients</a>
+      </div>
     </div>
 
     <!-- Navigation Arrows -->
@@ -630,7 +703,7 @@
   <!-- Order Products Section -->
   <section class="order-products-section fade-section">
     <h2>Order Our Products</h2>
-    <p>Since 1989, we have specialized in the field of pharmaceutical ingredients and cosmetic raw materials. Our customer base encompasses multi-national pharmaceutical corporations, generic pharmaceutical companies, biotech, and virtual companies, as well as others at the forefront of healthcare and personal care industries.</p>
+    <p> Since 1989, we have specialized in the field of Active Pharmaceutical Ingredients and Excipients. Our esteemed clientele includes multinational pharmaceutical corporations, generic pharmaceutical firms, and toll manufacturers. Additionally, we offer technical transfer dossiers, meticulously crafted to meet the unique needs and specifications of our clients. Our team of experts collaborates closely with you to find formulations that align seamlessly with your objectives and industry standards.</p>
     <a href="contact.html">Contact Us and Order</a>
   </section>
 
@@ -708,16 +781,16 @@
       <div class="footer-section">
         <h3>Connect with Us</h3>
         <div class="footer-icons">
-          <a href="https://wa.me/971518007643" target="_blank" class="hover:text-green-400">
+          <a href="https://wa.me/971518007643" target="_blank" class="hover:text-green-400" aria-label="WhatsApp">
             <i class="fab fa-whatsapp"></i>
           </a>
-          <a href="mailto:info@starkintl.com" class="hover:text-red-400">
+          <a href="mailto:info@starkintl.com" class="hover:text-red-400" aria-label="Email">
             <i class="fas fa-envelope icon"></i>
           </a>
-          <a href="tel:00971518007643" class="hover:text-blue-400">
+          <a href="tel:00971518007643" class="hover:text-blue-400" aria-label="Phone">
             <i class="fas fa-phone"></i>
           </a>
-          <a href="https://www.linkedin.com/company/starkintl?trk=blended-typeahead" target="_blank" class="hover:text-blue-500">
+          <a href="https://www.linkedin.com/company/starkintl?trk=blended-typeahead" target="_blank" class="hover:text-blue-500" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
           </a>
           <!-- Removed Twitter and Facebook icons -->
